# icon-editor-lab

./: -  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  CODEOWNERS  DESIGN-docker-handshake.md  Icon-Editor-Lab_HARDENING.md  Icon-Editor-Lab_THREAT-MODEL.md  Invoke-PesterTests.ps1  MAINTENANCE.md  MANIFEST.txt  README.md  SECURITY.md  codex_postmerge_rc.yml  coverage.xml  icon-editor-lab.sln  package-lock.json  package.json  run_local_ci_windows.cmd  temp.ps1  temp_dev_mode.ps1  temp_head.txt  temp_tail.txt  testResults.xml  tsconfig.cli.json  wf.yml
tools/x-cli-develop/: .dockerignore  .gitignore  .lychee.toml  .pre-commit-config.yaml  .yamllint  AGENTS.md  APPLY.md  CONTRIBUTING.md  CONTRIBUTING.snippet.md  Dockerfile  LICENSE  MANUAL_APPLY_GUIDE.txt  Makefile  PR_DESCRIPTION.md  QA-CHECKLIST.md  README.md  README.snippet.md  README_INSTALL_RUN_BLOCK.md  REVIEW_AGENDA.txt  TMP_pr_body.md  TMP_pr_note.md  WATERFALL.md  XCli.sln  action.yml  commit-template.snippet.md  gk-cli.README.master.md  pyproject.toml  testResults.xml
tools/x-cli-develop/.config/: PSScriptAnalyzerSettings.psd1  shellcheck-excludes.txt
tools/x-cli-develop/.devcontainer/: devcontainer.json
tools/x-cli-develop/.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
tools/x-cli-develop/.secrets/: README.md
tools/x-cli-develop/_kv/: validator.json
tools/x-cli-develop/codex_rules/: __init__.py  __main__.py  cli.py  config.py  memory.py  storage.py  telemetry.py
tools/x-cli-develop/docs/: AGENTS.md  AGENT_BOOTSTRAP.md  CHANGELOG.md  CM-Tagging-Policy.md  Component.md  Design.md  Echo.md  (+31 more)
(+3093 files in other folders)
